tests/NormalTests/paczka1/small_fuzzy/97232147.err
Error in line 2: eSfFFsDmlwr A633 3,4
Error in line 8: FsT1IKTgub A633 38,9
